<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Admin/Coordinator specific items -->
    <item
        android:id="@+id/action_switch_role"
        android:title="@string/switch_role"
        android:icon="@drawable/ic_switch_account"
        app:showAsAction="ifRoom" />

    <!-- Common items -->
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notifications" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never" />
</menu>